colored 5 card layout, added card within a card layout, added the first of three testimonials and added the base styling for every card.

--- a/index.html
+++ b/index.html
@@ -20,26 +20,14 @@
       <span></span>
       <span></span>
     </div>
-
-    <!-- Dark Blue: #0084FF
-Light Blue: #B8DDFF
-
-Dark Green: #54C788
-Light Green: #CAF0DB
-
-Dark Red: #FF8A8A
-Light Red: #FFD2D2
-
-Dark Yellow: #FFC166
-Light Yellow: #FFE7C4 -->
-
   </header>
 
   <main>
+    <!-- 5 Card Layout -->
     <section class="card" id="demo-application">
-      <h2>
+      <h1>
         Get a demo application
-      </h2>
+      </h1>
       <p>
         Duis aute irure dolor in reprehenderit in<br>
         voluptate velit esse cillum dolore eu fugiat<br>
@@ -55,6 +43,122 @@ Light Yellow: #FFE7C4 -->
       </div>
       <img id="blue-phone" src="/images/blue_phone.png" alt="Blue Phone">
     </section>
+
+    <section class="card" id="clean-code">
+      <img src="/images/code.svg" alt="clean code">
+      <h1>
+        Clean Code
+      </h1>
+      <p>
+        Duis aute irure dolor in reprehenderit in<br>
+        voluptate velit esse cillum dolore eu fugiat<br>
+        nulla pariatur excepteur sint mollit anim id.
+      </p>
+    </section>
+
+    <section class="card" id="web-design">
+      <img src="/images/design.svg" alt="web design">
+      <h1>
+        Web Design
+      </h1>
+      <p>
+        Duis aute irure dolor in reprehenderit in<br>
+        voluptate velit esse cillum dolore eu fugiat<br>
+        nulla pariatur excepteur sint mollit anim id.
+      </p>
+    </section>
+
+    <section class="card" id="development">
+      <img src="/images/development.svg" alt="Development">
+      <h1>
+        Development
+      </h1>
+      <p>
+        Duis aute irure dolor in reprehenderit in<br>
+        voluptate velit esse cillum dolore eu fugiat<br>
+        nulla pariatur excepteur sint mollit anim id.
+      </p>
+    </section>
+
+    <section class="card" id="branding">
+      <img src="/images/branding.svg" alt="branding">
+      <h1>
+        Branding
+      </h1>
+      <p>
+        Duis aute irure dolor in reprehenderit in<br>
+        voluptate velit esse cillum dolore eu fugiat<br>
+        nulla pariatur excepteur sint mollit anim id.
+      </p>
+    </section>
+    <!-- End of 5 Card Layout -->
+
+    <!-- Card Within A Card Layout-->
+    <section class="card" id="strategic-planning">
+      <img src="/images/waving_woman.png" alt="waving woman">
+      <h1>
+        Strategic Planning
+      </h1>
+      <p>
+        Egestas dui id ornare arcu odio. In tellus<br>
+        integer feugiat scelerisque varius morbi enim<br>
+        nunc. Habitasse platea dictumst quisque<br>
+        sagittis. Interdum velit euismod in<br>
+        pellentesque massa placerat duis. Quis<br>
+        viverra nibh cras pulvinar mattis.
+      </p>
+      <div class="card" id="app-development">
+        <img src="/images/idea_man.png" alt="idea man">
+        <h1>
+          App Development
+        </h1>
+        <p>
+          Develop an on-demand app for your delivery business to reach your targeted customers without any interruption.
+        </p>
+      </div>
+      <h1 id="down-arrow">
+        &#8595;
+      </h1>
+    </section>
+    <!-- End of Card Within A Card Layout-->
+
+    <!-- Testimonials Layout -->
+    <section class="card" id="testimonials-container">
+      <h3>
+        TESTIMONIALS
+      </h3>
+      <h1>
+        We are committed expert partners
+      </h1>
+      <p>
+        We place huge value on strong relationships and have seen the benefit they bring to out business. Customer
+        feedback is vital in helping us to get it right.
+      </p>
+      <div class="card" id="testimonial-1">
+        <img src="/images/testimonial_three.jpg" alt="white dude smiling">
+        <p>
+          <b class="qutoes">
+            &#x201D;
+          </b>
+          Vitae suscpit tellus mauris a<br>
+          diam maecenas sed enim ut.<br>
+          Mauris augue neque gravida in<br>
+          fermentum. Praesent semper<br>
+          feugiat nibh sed pulvinar<br>
+          proin.
+          <b class="qutoes">
+            &#x201D;
+          </b>
+        </p>
+        <h2>
+          NAT REYNOLDS
+        </h2>
+    </section>
+
+
+
+
+    <!-- End Of Testimonials Layout -->
   </main>
 
   <footer>
