--- a/index.html
+++ b/index.html
@@ -153,6 +153,46 @@
         <h2>
           NAT REYNOLDS
         </h2>
+      </div>
+      <div class="card" id="testimonial-2">
+        <img src="/images/testimonial_two.jpg" alt="white girl smiling">
+        <p>
+          <b class="qutoes">
+            &#x201D;
+          </b>
+          Pharetra vel turpis nunc eget<br>
+          lorem. Quisque id diam vel<br>
+          quam elementum pulvinar<br>
+          etiam. Urna porttitor rhoncus<br>
+          dolor purus non enim praesent<br>
+          elementum.
+          <b class="qutoes">
+            &#x201D;
+          </b>
+        </p>
+        <h2>
+          CELIA ALMEDA
+        </h2>
+      </div>
+      <div class="card" id="testimonial-3">
+        <img src="/images/testimonial_one.jpg" alt="white dude smiling">
+        <p>
+          <b class="qutoes">
+            &#x201D;
+          </b>
+          Mauris augue neque gravida<br>
+          in fermentum. Praesent semper<br>
+          feugiat nibh sed pulvinar proin.<br>
+          Nibh nisl condimentum id<br>
+          venenatis a condimentum.
+          <b class="qutoes">
+            &#x201D;
+          </b>
+        </p>
+        <h2>
+          BOB ROBERTS
+        </h2>
+      </div>
     </section>
 
 
