Added about us section, and basic layout for that section

--- a/index.html
+++ b/index.html
@@ -194,11 +194,160 @@
         </h2>
       </div>
     </section>
-
-
-
-
     <!-- End Of Testimonials Layout -->
+
+    <!-- 6 Cards Within A Card Layout -->
+    <section class="card" id="benefits-container">
+      <h1>
+        Benefits of working with us
+      </h1>
+      <div class="card" id="high-quality">
+        <h4>
+          01
+        </h4>
+        <h2>
+          High Quality
+        </h2>
+        <p>
+          Vitae suscpit tellus mauris a diam maecenas sed<br>
+          enim ut. Mauris augue neque gravida in<br>
+          fermentum. Praesent semper feugiat nibh sed<br>
+          pulvinar proin id venenatis.
+        </p>
+        <p class="more-bubble">
+          more
+        </p>
+      </div>
+      <div class="card" id="creative-team">
+        <h4>
+          02
+        </h4>
+        <h2>
+          Creative Team
+        </h2>
+        <p>
+          Vitae suscpit tellus mauris a diam maecenas sed<br>
+          enim ut. Mauris augue neque gravida in<br>
+          fermentum. Praesent semper feugiat nibh sed<br>
+          pulvinar proin id venenatis.
+        </p>
+        <p class="more-bubble">
+          more
+        </p>
+      </div>
+      <div class="card" id="Amazing Results">
+        <h4>
+          03
+        </h4>
+        <h2>
+          Amazing Results
+        </h2>
+        <p>
+          Vitae suscpit tellus mauris a diam maecenas sed<br>
+          enim ut. Mauris augue neque gravida in<br>
+          fermentum. Praesent semper feugiat nibh sed<br>
+          pulvinar proin id venenatis.
+        </p>
+        <p class="more-bubble">
+          more
+        </p>
+      </div>
+      <div class="card" id="best-pricing">
+        <h4>
+          04
+        </h4>
+        <h2>
+          Best Pricing
+        </h2>
+        <p>
+          Vitae suscpit tellus mauris a diam maecenas sed<br>
+          enim ut. Mauris augue neque gravida in<br>
+          fermentum. Praesent semper feugiat nibh sed<br>
+          pulvinar proin id venenatis.
+        </p>
+        <p class="more-bubble">
+          more
+        </p>
+      </div>
+      <div class="card" id="innovations">
+        <h4>
+          05
+        </h4>
+        <h2>
+          Innovations
+        </h2>
+        <p>
+          Vitae suscpit tellus mauris a diam maecenas sed<br>
+          enim ut. Mauris augue neque gravida in<br>
+          fermentum. Praesent semper feugiat nibh sed<br>
+          pulvinar proin id venenatis.
+        </p>
+        <p class="more-bubble">
+          more
+        </p>
+      </div>
+      <div class="card" id="24/7">
+        <h4>
+          06
+        </h4>
+        <h2>
+          24/7 Support
+        </h2>
+        <p>
+          Vitae suscpit tellus mauris a diam maecenas sed<br>
+          enim ut. Mauris augue neque gravida in<br>
+          fermentum. Praesent semper feugiat nibh sed<br>
+          pulvinar proin id venenatis.
+        </p>
+        <p class="more-bubble">
+          more
+        </p>
+      </div>
+    </section>
+    <!-- End Of 6 Cards Within A Card Layout -->
+
+    <!-- About Us Layout -->
+    <section class="card" id="about-us">
+      <h1>
+        About Us
+      </h1>
+      <p>
+        Sample text. Click to Egestas egestas fringilla<br>
+        phasellus faucibus scelerisque eleifend donec<br>
+        pretium vulputate. Pharetra magna ac placerat<br> vestibulum. Quam lacus suspendisse faucibus<br>
+        interdum posuere lorem. Egestas tellus rutrum<br>
+        tellus pellentesque eu tincidunt. Neque vitae<br>
+        tempus quam pellentesque nec. Vel elit<br>
+        scelerisque mauris pellentesque pulvinar<br>
+        pellentesque habitant morbi. Interdum velit<br>
+        euismod in pellentesque massa placerat duis.
+      </p>
+      <p>
+        Quis viverra nibh cras pulvinar mattis. Ornare<br>
+        arcu dui vivamus arcu felis bibendum ut tristique.<br> Pellentesque eu tincidunt tortor aliquam nulla<br>
+        facilisi cras fermentum odio. Dignissim diam quis<br>
+        enim lobortis scelerisque. Tellus molestie nunc<br>
+        non blandit massa enim. the text box. Click again<br>
+        or double click to start editing the text.
+      </p>
+      <img src="/images/boss-circle-quote.png" alt="white dude in a suit">
+      <h2>
+        I help companies tincidunt<br>
+        tortor aliquam nulla facilisi<br>
+        cras fermentum odio.
+      </h2>
+      <div class="card" id="linkedin">
+        <img src="/assets/fi-brands-svg/fi-brands-linkedin.svg" alt="linkedin logo">
+        <h4>
+          Find me on LinkedIn
+        </h4>
+      </div>
+    </section>
+
+
+    <!-- End Of About Us Layout -->
+
+
   </main>
 
   <footer>
