Finished adding in all the html content, and have the structure in place to begin styling the site, finished about us section, added get started section.

--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
         <p>
           Develop an on-demand app for your delivery business to reach your targeted customers without any interruption.
         </p>
+        <h1 id="down-arrow">
+          &#8595;
+        </h1>
       </div>
-      <h1 id="down-arrow">
-        &#8595;
-      </h1>
     </section>
     <!-- End of Card Within A Card Layout-->
 
@@ -337,21 +337,63 @@
         cras fermentum odio.
       </h2>
       <div class="card" id="linkedin">
-        <img src="/assets/fi-brands-svg/fi-brands-linkedin.svg" alt="linkedin logo">
+        <img src="/images/linkedin.svg" alt="linkedin logo">
         <h4>
           Find me on LinkedIn
         </h4>
       </div>
     </section>
-
-
     <!-- End Of About Us Layout -->
 
+    <!-- Get Started Layout -->
+    <section class="card" id="get-started">
+      <h4>
+        GET STARTED
+      </h4>
+      <h2>
+        Simple, Transparent Pricing
+      </h2>
+      <h1>
+        It's Free!
+      </h1>
+      <p>
+        We're still in beta and we will be for awhile. As we add more functionality, we'll look into other plans with
+        more controls.
+      </p>
+      <div class="card" id="get-started-button">
+        <h3>
+          Get Started
+        </h3>
+      </div>
+      <p>
+        Copyright 2023&copy;
+      </p>
+      <div id="big-dot">
+        <p>
+          &#x2E;
+        </p>
+      </div>
+      <a href="/pages/">Terms of Service</a>
+      <div id="big-dot">
+        <p>
+          &#x2E;
+        </p>
+      </div>
+      <a href="/pages/">Privacy Policy</a>
+    </section>
+
+
+
+    <!-- End Of Get Started Layout -->
 
   </main>
 
   <footer>
-
+    <section class="card" id="footer">
+      <p>
+        Sample text. Click to select the text box. Click again or double click to start editing the text.
+      </p>
+    </section>
   </footer>
 </body>
 
