finished first card styling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="keyword1, keyword2, keyword3">
   <meta name="author" content="Your Name">
   <title>W4B: A Full Site</title>
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" type="text/css" href="/css/styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i">
 </head>
 
