initialized sass to the project, added variables for all the colors, began styling the content as well as making sure they are responsive

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <meta name="keywords" content="keyword1, keyword2, keyword3">
   <meta name="author" content="Your Name">
   <title>W4B: A Full Site</title>
-  <link rel="stylesheet" type="text/css" href="/css/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i">
 </head>
 
 <body>
-  <header>
+  <header class="container">
     <img src="/images/logo-high-resolution-logo.svg" alt="logo">
     <div class="menu-icon">
       <span></span>
@@ -24,7 +24,7 @@
 
   <main>
     <!-- 5 Card Layout -->
-    <section class="card" id="demo-application">
+    <section class="card" class="container" id="demo-application">
       <h1>
         Get a demo application
       </h1>
@@ -44,7 +44,7 @@
       <img id="blue-phone" src="/images/blue_phone.png" alt="Blue Phone">
     </section>
 
-    <section class="card" id="clean-code">
+    <section class="card" class="container" id="clean-code">
       <img src="/images/code.svg" alt="clean code">
       <h1>
         Clean Code
@@ -56,7 +56,7 @@
       </p>
     </section>
 
-    <section class="card" id="web-design">
+    <section class="card" class="container" id="web-design">
       <img src="/images/design.svg" alt="web design">
       <h1>
         Web Design
@@ -68,7 +68,7 @@
       </p>
     </section>
 
-    <section class="card" id="development">
+    <section class="card" class="container" id="development">
       <img src="/images/development.svg" alt="Development">
       <h1>
         Development
@@ -80,7 +80,7 @@
       </p>
     </section>
 
-    <section class="card" id="branding">
+    <section class="card" class="container" id="branding">
       <img src="/images/branding.svg" alt="branding">
       <h1>
         Branding
@@ -94,7 +94,7 @@
     <!-- End of 5 Card Layout -->
 
     <!-- Card Within A Card Layout-->
-    <section class="card" id="strategic-planning">
+    <section class="card" class="container" id="strategic-planning">
       <img src="/images/waving_woman.png" alt="waving woman">
       <h1>
         Strategic Planning
@@ -123,7 +123,7 @@
     <!-- End of Card Within A Card Layout-->
 
     <!-- Testimonials Layout -->
-    <section class="card" id="testimonials-container">
+    <section class="card" class="container" id="testimonials-container">
       <h3>
         TESTIMONIALS
       </h3>
@@ -197,7 +197,7 @@
     <!-- End Of Testimonials Layout -->
 
     <!-- 6 Cards Within A Card Layout -->
-    <section class="card" id="benefits-container">
+    <section class="card" class="container" id="benefits-container">
       <h1>
         Benefits of working with us
       </h1>
@@ -307,7 +307,7 @@
     <!-- End Of 6 Cards Within A Card Layout -->
 
     <!-- About Us Layout -->
-    <section class="card" id="about-us">
+    <section class="card" class="container" id="about-us">
       <h1>
         About Us
       </h1>
@@ -346,7 +346,7 @@
     <!-- End Of About Us Layout -->
 
     <!-- Get Started Layout -->
-    <section class="card" id="get-started">
+    <section class="card" class="container" id="get-started">
       <h4>
         GET STARTED
       </h4>
@@ -389,7 +389,7 @@
   </main>
 
   <footer>
-    <section class="card" id="footer">
+    <section class="card" class="container" id="footer">
       <p>
         Sample text. Click to select the text box. Click again or double click to start editing the text.
       </p>
