Finished styling for 5 card layout on mobile screen sizes, began styling the "strategic planning" card (also known as card within a card)

--- a/index.html
+++ b/index.html
@@ -113,7 +113,12 @@
           App Development
         </h1>
         <p>
-          Develop an on-demand app for your delivery business to reach your targeted customers without any interruption.
+          <i>
+            Develop an on-demand app for<br>
+            your delivery business to reach<br>
+            your targeted customers without<br>
+            any interruption.
+          </i>
         </p>
         <h1 id="down-arrow">
           &#8595;
