Finished "Strategic Planning" styling

--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
       </p>
       <div class="card" id="app-development">
         <img src="/images/idea_man.png" alt="idea man">
-        <h1>
+        <h2>
           App Development
-        </h1>
+        </h2>
         <p>
           <i>
             Develop an on-demand app for<br>
@@ -120,9 +120,8 @@
             any interruption.
           </i>
         </p>
-        <h1 id="down-arrow">
-          &#8595;
-        </h1>
+        <object id="down-arrow" type="image/svg+xml" data="/images/arrow.svg" width="70" height="70">
+        </object>
       </div>
     </section>
     <!-- End of Card Within A Card Layout-->
