made progress on testimonials section (33%)

--- a/index.html
+++ b/index.html
@@ -128,16 +128,22 @@
 
     <!-- Testimonials Layout -->
     <section class="card" class="container" id="testimonials-container">
-      <h3>
-        TESTIMONIALS
-      </h3>
-      <h1>
-        We are committed expert partners
-      </h1>
-      <p>
-        We place huge value on strong relationships and have seen the benefit they bring to out business. Customer
-        feedback is vital in helping us to get it right.
-      </p>
+      <div class="card" id="header-text-testimonials">
+        <h3>
+          TESTIMONIALS
+        </h3>
+        <h1>
+          We are committed<br>
+          expert partners
+        </h1>
+        <p>
+          We place huge value on strong<br>
+          relationships and have seen the<br>
+          benefit they bring to out business.<br>
+          Customer feedback is vital in<br>
+          helping us to get it right.
+        </p>
+      </div>
       <div class="card" id="testimonial-1">
         <img src="/images/testimonial_three.jpg" alt="white dude smiling">
         <p>
