allmost done with the testimonials cards, having trouble with the stupid svg quotes

--- a/index.html
+++ b/index.html
@@ -145,29 +145,26 @@
         </p>
       </div>
       <div class="card" id="testimonial-1">
-        <img src="/images/testimonial_three.jpg" alt="white dude smiling">
-        <p>
-          <b class="qutoes">
-            &#x201D;
-          </b>
+        <img src="/images/testimonial1.png" alt="white dude smiling">
+        <div class="quote-text">
+
+
+
           Vitae suscpit tellus mauris a<br>
           diam maecenas sed enim ut.<br>
           Mauris augue neque gravida in<br>
           fermentum. Praesent semper<br>
           feugiat nibh sed pulvinar<br>
           proin.
-          <b class="qutoes">
-            &#x201D;
-          </b>
-        </p>
+        </div>
         <h2>
           NAT REYNOLDS
         </h2>
       </div>
       <div class="card" id="testimonial-2">
-        <img src="/images/testimonial_two.jpg" alt="white girl smiling">
+        <img src="/images/Untitled design(1).png" alt="white girl smiling">
         <p>
-          <b class="qutoes">
+          <b class="quotes">
             &#x201D;
           </b>
           Pharetra vel turpis nunc eget<br>
@@ -185,9 +182,9 @@
         </h2>
       </div>
       <div class="card" id="testimonial-3">
-        <img src="/images/testimonial_one.jpg" alt="white dude smiling">
+        <img src="/images/Untitled design.png" alt="white dude smiling">
         <p>
-          <b class="qutoes">
+          <b class="quotes">
             &#x201D;
           </b>
           Mauris augue neque gravida<br>
