added quotes using the svg tag,still not done with the styling for it.

--- a/index.html
+++ b/index.html
@@ -148,7 +148,9 @@
         <img src="/images/testimonial1.png" alt="white dude smiling">
         <div class="quote-text">
 
-
+          <svg class="quote-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <image href="images/left_quote.svg" width="24" height="24" />
+          </svg>
 
           Vitae suscpit tellus mauris a<br>
           diam maecenas sed enim ut.<br>
@@ -156,6 +158,9 @@
           fermentum. Praesent semper<br>
           feugiat nibh sed pulvinar<br>
           proin.
+          <svg class="quote-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <image href="images/right_quote.svg" width="24" height="24" />
+          </svg>
         </div>
         <h2>
           NAT REYNOLDS
