Finished styling the testimonials section

--- a/index.html
+++ b/index.html
@@ -147,11 +147,9 @@
       <div class="card" id="testimonial-1">
         <img src="/images/testimonial1.png" alt="white dude smiling">
         <div class="quote-text">
-
           <svg class="quote-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
             <image href="images/left_quote.svg" width="24" height="24" />
           </svg>
-
           Vitae suscpit tellus mauris a<br>
           diam maecenas sed enim ut.<br>
           Mauris augue neque gravida in<br>
@@ -168,39 +166,39 @@
       </div>
       <div class="card" id="testimonial-2">
         <img src="/images/Untitled design(1).png" alt="white girl smiling">
-        <p>
-          <b class="quotes">
-            &#x201D;
-          </b>
+        <div class="quote-text">
+          <svg class="quote-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <image href="images/left_quote.svg" width="24" height="24" />
+          </svg>
           Pharetra vel turpis nunc eget<br>
           lorem. Quisque id diam vel<br>
           quam elementum pulvinar<br>
           etiam. Urna porttitor rhoncus<br>
           dolor purus non enim praesent<br>
           elementum.
-          <b class="qutoes">
-            &#x201D;
-          </b>
-        </p>
+          <svg class="quote-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <image href="images/left_quote.svg" width="24" height="24" />
+          </svg>
+        </div>
         <h2>
           CELIA ALMEDA
         </h2>
       </div>
       <div class="card" id="testimonial-3">
         <img src="/images/Untitled design.png" alt="white dude smiling">
-        <p>
-          <b class="quotes">
-            &#x201D;
-          </b>
+        <div class="quote-text">
+          <svg class="quote-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <image href="images/left_quote.svg" width="24" height="24" />
+          </svg>
           Mauris augue neque gravida<br>
           in fermentum. Praesent semper<br>
           feugiat nibh sed pulvinar proin.<br>
           Nibh nisl condimentum id<br>
           venenatis a condimentum.
-          <b class="qutoes">
-            &#x201D;
-          </b>
-        </p>
+          <svg class="quote-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <image href="images/left_quote.svg" width="24" height="24" />
+          </svg>
+        </div>
         <h2>
           BOB ROBERTS
         </h2>
