finished Benefits Container section, almost done with about us section

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           dolor purus non enim praesent<br>
           elementum.
           <svg class="quote-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-            <image href="images/left_quote.svg" width="24" height="24" />
+            <image href="images/right_quote.svg" width="24" height="24" />
           </svg>
         </div>
         <h2>
@@ -188,7 +188,7 @@
         <img src="/images/Untitled design.png" alt="white dude smiling">
         <div class="quote-text">
           <svg class="quote-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-            <image href="images/left_quote.svg" width="24" height="24" />
+            <image href="images/right_quote.svg" width="24" height="24" />
           </svg>
           Mauris augue neque gravida<br>
           in fermentum. Praesent semper<br>
@@ -211,108 +211,120 @@
       <h1>
         Benefits of working with us
       </h1>
-      <div class="card" id="high-quality">
-        <h4>
+      <article class="card" id="high-quality">
+        <h2>
           01
-        </h4>
-        <h2>
+        </h2>
+        <h4>
           High Quality
-        </h2>
+        </h4>
         <p>
           Vitae suscpit tellus mauris a diam maecenas sed<br>
           enim ut. Mauris augue neque gravida in<br>
           fermentum. Praesent semper feugiat nibh sed<br>
           pulvinar proin id venenatis.
         </p>
-        <p class="more-bubble">
-          more
-        </p>
-      </div>
-      <div class="card" id="creative-team">
-        <h4>
+        <div class="more-container">
+          <h3 class="more-bubble">
+            more
+          </h3>
+        </div>
+      </article>
+      <article class="card" id="creative-team">
+        <h2>
           02
-        </h4>
-        <h2>
+        </h2>
+        <h4>
           Creative Team
-        </h2>
+        </h4>
         <p>
           Vitae suscpit tellus mauris a diam maecenas sed<br>
           enim ut. Mauris augue neque gravida in<br>
           fermentum. Praesent semper feugiat nibh sed<br>
           pulvinar proin id venenatis.
         </p>
-        <p class="more-bubble">
-          more
-        </p>
-      </div>
-      <div class="card" id="Amazing Results">
-        <h4>
+        <div class="more-container">
+          <h3 class="more-bubble">
+            more
+          </h3>
+        </div>
+      </article>
+      <article class="card" id="amazing-results">
+        <h2>
           03
-        </h4>
-        <h2>
+        </h2>
+        <h4>
           Amazing Results
-        </h2>
+        </h4>
         <p>
           Vitae suscpit tellus mauris a diam maecenas sed<br>
           enim ut. Mauris augue neque gravida in<br>
           fermentum. Praesent semper feugiat nibh sed<br>
           pulvinar proin id venenatis.
         </p>
-        <p class="more-bubble">
-          more
-        </p>
-      </div>
-      <div class="card" id="best-pricing">
-        <h4>
+        <div class="more-container">
+          <h3 class="more-bubble">
+            more
+          </h3>
+        </div>
+      </article>
+      <article class="card" id="best-pricing">
+        <h2>
           04
-        </h4>
-        <h2>
+        </h2>
+        <h4>
           Best Pricing
-        </h2>
+        </h4>
         <p>
           Vitae suscpit tellus mauris a diam maecenas sed<br>
           enim ut. Mauris augue neque gravida in<br>
           fermentum. Praesent semper feugiat nibh sed<br>
           pulvinar proin id venenatis.
         </p>
-        <p class="more-bubble">
-          more
-        </p>
-      </div>
-      <div class="card" id="innovations">
-        <h4>
+        <div class="more-container">
+          <h3 class="more-bubble">
+            more
+          </h3>
+        </div>
+      </article>
+      <article class="card" id="innovations">
+        <h2>
           05
-        </h4>
-        <h2>
-          Innovations
         </h2>
-        <p>
-          Vitae suscpit tellus mauris a diam maecenas sed<br>
-          enim ut. Mauris augue neque gravida in<br>
-          fermentum. Praesent semper feugiat nibh sed<br>
-          pulvinar proin id venenatis.
-        </p>
-        <p class="more-bubble">
-          more
-        </p>
-      </div>
-      <div class="card" id="24/7">
         <h4>
-          06
+          Innovations
         </h4>
-        <h2>
-          24/7 Support
-        </h2>
         <p>
           Vitae suscpit tellus mauris a diam maecenas sed<br>
           enim ut. Mauris augue neque gravida in<br>
           fermentum. Praesent semper feugiat nibh sed<br>
           pulvinar proin id venenatis.
         </p>
-        <p class="more-bubble">
-          more
+        <div class="more-container">
+          <h3 class="more-bubble">
+            more
+          </h3>
+        </div>
+      </article>
+      <article class="card" id="twofoursev-support">
+        <h2>
+          06
+        </h2>
+        <h4>
+          24/7 Support
+        </h4>
+        <p>
+          Vitae suscpit tellus mauris a diam maecenas sed<br>
+          enim ut. Mauris augue neque gravida in<br>
+          fermentum. Praesent semper feugiat nibh sed<br>
+          pulvinar proin id venenatis.
         </p>
-      </div>
+        <div class="more-container">
+          <h3 class="more-bubble">
+            more
+          </h3>
+        </div>
+      </article>
     </section>
     <!-- End Of 6 Cards Within A Card Layout -->
 
@@ -321,25 +333,27 @@
       <h1>
         About Us
       </h1>
-      <p>
-        Sample text. Click to Egestas egestas fringilla<br>
-        phasellus faucibus scelerisque eleifend donec<br>
-        pretium vulputate. Pharetra magna ac placerat<br> vestibulum. Quam lacus suspendisse faucibus<br>
-        interdum posuere lorem. Egestas tellus rutrum<br>
-        tellus pellentesque eu tincidunt. Neque vitae<br>
-        tempus quam pellentesque nec. Vel elit<br>
-        scelerisque mauris pellentesque pulvinar<br>
-        pellentesque habitant morbi. Interdum velit<br>
-        euismod in pellentesque massa placerat duis.
-      </p>
-      <p>
-        Quis viverra nibh cras pulvinar mattis. Ornare<br>
-        arcu dui vivamus arcu felis bibendum ut tristique.<br> Pellentesque eu tincidunt tortor aliquam nulla<br>
-        facilisi cras fermentum odio. Dignissim diam quis<br>
-        enim lobortis scelerisque. Tellus molestie nunc<br>
-        non blandit massa enim. the text box. Click again<br>
-        or double click to start editing the text.
-      </p>
+      <div id="about-us-text">
+        <p>
+          Sample text. Click to Egestas egestas fringilla<br>
+          phasellus faucibus scelerisque eleifend donec<br>
+          pretium vulputate. Pharetra magna ac placerat<br> vestibulum. Quam lacus suspendisse faucibus<br>
+          interdum posuere lorem. Egestas tellus rutrum<br>
+          tellus pellentesque eu tincidunt. Neque vitae<br>
+          tempus quam pellentesque nec. Vel elit<br>
+          scelerisque mauris pellentesque pulvinar<br>
+          pellentesque habitant morbi. Interdum velit<br>
+          euismod in pellentesque massa placerat duis.
+        </p>
+        <p>
+          Quis viverra nibh cras pulvinar mattis. Ornare<br>
+          arcu dui vivamus arcu felis bibendum ut tristique.<br> Pellentesque eu tincidunt tortor aliquam nulla<br>
+          facilisi cras fermentum odio. Dignissim diam quis<br>
+          enim lobortis scelerisque. Tellus molestie nunc<br>
+          non blandit massa enim. the text box. Click again<br>
+          or double click to start editing the text.
+        </p>
+      </div>
       <img src="/images/boss-circle-quote.png" alt="white dude in a suit">
       <h2>
         I help companies tincidunt<br>
@@ -347,7 +361,7 @@
         cras fermentum odio.
       </h2>
       <div class="card" id="linkedin">
-        <img src="/images/linkedin.svg" alt="linkedin logo">
+
         <h4>
           Find me on LinkedIn
         </h4>
